--- a/style.css
+++ b/style.css
@@ -83,9 +83,30 @@ background-color: var(--Orange);
 background-color: var(--Blue);
 }
 
+.TheTeam{
+ display: grid;
+ gap: 20px;
+  background-color: var(--Very-Light-Gray);
+  padding-bottom: 0;
+  /* background-color: red; */
+}
+
+.teambox, .karmabox{
+  box-shadow: -5px 5px 20px hsl(229, 6%, 66%);
+  border-radius: 5px;
+  padding-bottom: 20px;
+}
+
+.box{
+  height: 220px;
+}
 
 @media only screen and (min-width: 1000px){
   
+  body{
+    margin-top: 30px;
+  }
+
 p{
   max-width: 560px  ;
   text-align: center;
@@ -96,7 +117,7 @@ p{
   display: flex;
   height: 500px;
   width: 80%;
-  margin: 3rem auto;
+  margin: 1rem auto;
 }
 
 section{
@@ -105,30 +126,44 @@ section{
 
 
 .TheCalculator, .TheSupervisor{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 180px;
+  height: 210px;
   width: 30%;
   align-self: center;
+  
 }
 
 .TheTeam{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 80%;
+  height: 92%;
   width: 30%;
-  gap: 50px;
+  background-color: var(--Very-Light-Gray);
+  box-shadow: none;
+  gap: 0;
 
 }
 
 .box{
-  height: 180px;
+  height: 220px;
+  background-color: #fff;
 }
 
 .karmabox {
   margin-top: 20px;
+}
+
+img{
+  margin-top: 20px;
+}
+
+.textBox p{
+  text-align: left;
+}
+
+.teambox, .karmabox{
+  box-shadow: -5px 5px 20px hsl(229, 6%, 66%);
+  border-radius: 5px;
 }
 
 }
